--- a/index.html
+++ b/index.html
@@ -634,12 +634,12 @@
 
                 <div class="form-row">
                     <div class="form-group">
-                        <label>Bairro <span class="required">*</span></label>
-                        <input type="text" id="bairro" placeholder="Bairro">
+                        <label>Microárea <span class="required">*</span></label>
+                        <input type="text" id="microarea" placeholder="Microárea">
                     </div>
                     <div class="form-group">
-                        <label>Cidade <span class="required">*</span></label>
-                        <input type="text" id="cidade" value="Carmo" placeholder="Cidade">
+                        <label>Quarteirão <span class="required">*</span></label>
+                        <input type="text" id="quarteirao" value="Carmo" placeholder="Quarteirão">
                     </div>
                 </div>
             </div>
@@ -1038,9 +1038,9 @@
         function saveVisit() {
             const logradouro = document.getElementById('logradouro').value.trim();
             const numero = document.getElementById('numero').value.trim();
-            const bairro = document.getElementById('bairro').value.trim();
+            const microarea = document.getElementById('microarea').value.trim();
 
-            if (!logradouro || !numero || !bairro) {
+            if (!logradouro || !numero || !microarea) {
                 showToast('Preencha os campos obrigatórios (*)', 'error');
                 return;
             }
@@ -1060,8 +1060,8 @@
                     logradouro: logradouro,
                     numero: numero,
                     complemento: document.getElementById('complemento').value,
-                    bairro: bairro,
-                    cidade: document.getElementById('cidade').value
+                    microarea: microarea,
+                    quarteirao: document.getElementById('quarteirao').value
                 },
                 
                 imovel: {
@@ -1106,8 +1106,8 @@
             document.getElementById('logradouro').value = '';
             document.getElementById('numero').value = '';
             document.getElementById('complemento').value = '';
-            document.getElementById('bairro').value = '';
-            document.getElementById('cidade').value = 'Carmo';
+            document.getElementById('microarea').value = '';
+            document.getElementById('quarteirao').value = 'Carmo';
             document.getElementById('tipoImovel').value = 'residencial';
             document.getElementById('situacaoImovel').value = 'normal';
             document.getElementById('tipoTratamento').value = 'nenhum';
@@ -1208,7 +1208,7 @@
 
             const headers = [
                 'Data', 'Hora', 'Agente', 'Matrícula', 'Equipe', 'Supervisor',
-                'Logradouro', 'Número', 'Complemento', 'Bairro', 'Cidade',
+                'Logradouro', 'Número', 'Complemento', 'Microárea', 'Quarteirão',
                 'Tipo Imóvel', 'Situação', 'Latitude', 'Longitude', 'Precisão_GPS',
                 'Tratamento', 'Dep_Eliminados', 'Dep_Tratados', 'Dep_Protegidos', 'Dep_Impraticáveis',
                 'Depósitos_Inspecionados', 'Depósitos_Positivos'
@@ -1220,7 +1220,7 @@
                 
                 return [
                     v.data, v.hora, v.agente, v.matricula, v.equipe, agentConfig.supervisor || '',
-                    v.endereco.logradouro, v.endereco.numero, v.endereco.complemento, v.endereco.bairro, v.endereco.cidade,
+                    v.endereco.logradouro, v.endereco.numero, v.endereco.complemento, v.endereco.microarea, v.endereco.quarteirao,
                     v.imovel.tipo, v.imovel.situacao,
                     v.localizacao?.lat || '', v.localizacao?.lng || '', v.localizacao?.accuracy || '',
                     v.tratamento, v.contagem.eliminados, v.contagem.tratados, v.contagem.protegidos, v.contagem.impraticaveis,
@@ -1277,4 +1277,5 @@
         };
     </script>
 </body>
+
 </html>
