--- a/index.html
+++ b/index.html
@@ -720,12 +720,12 @@
                                 <td><input type="checkbox" id="tonel_impr" onchange="calcularContagem()"></td>
                             </tr>
                             <tr>
-                                <td>🏺 Barrica</td>
-                                <td><input type="checkbox" id="barrica_inspec" onchange="calcularContagem()"></td>
-                                <td><input type="checkbox" id="barrica_elim" onchange="calcularContagem()"></td>
-                                <td><input type="checkbox" id="barrica_posit" onchange="calcularContagem()"></td>
-                                <td><input type="checkbox" id="barrica_prot" onchange="calcularContagem()"></td>
-                                <td><input type="checkbox" id="barrica_impr" onchange="calcularContagem()"></td>
+                                <td>🏺 ralo</td>
+                                <td><input type="checkbox" id="ralo_inspec" onchange="calcularContagem()"></td>
+                                <td><input type="checkbox" id="ralo_elim" onchange="calcularContagem()"></td>
+                                <td><input type="checkbox" id="ralo_posit" onchange="calcularContagem()"></td>
+                                <td><input type="checkbox" id="ralo_prot" onchange="calcularContagem()"></td>
+                                <td><input type="checkbox" id="ralo_impr" onchange="calcularContagem()"></td>
                             </tr>
                             <tr>
                                 <td>🪴 Vaso Planta</td>
@@ -1036,7 +1036,7 @@
 
         // Lista de depósitos para controle
         const DEPOSITOS = [
-            'cx', 'piscina', 'vaso', 'tanque', 'tonel', 'barrica', 
+            'cx', 'piscina', 'vaso', 'tanque', 'tonel', 'ralo', 
             'pote', 'balde', 'garrafa', 'pneu', 'lixo', 'outros'
         ];
 
@@ -1582,3 +1582,4 @@
     </script>
 </body>
 </html>
+
