--- a/index.html
+++ b/index.html
@@ -1293,7 +1293,7 @@
 
                 await fetch(CONFIG.SYNC_URL, {
                     method: 'POST',
-                    mode: 'no-cors',
+                  //  mode: 'no-cors',
                     body: formData
                 });
 
@@ -1590,5 +1590,6 @@
     </script>
 </body>
 </html>
+
 
 
