--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@
         // ============================================
 
         const CONFIG = {
-            SYNC_URL: 'https://script.google.com/macros/s/AKfycbytbNVZSh9wXdOzgfPP5Z7o2G1V_F4sN5Z154n_U2KnujnzPbYNMReTv2keA561nUcv/exec',
+            SYNC_URL: 'https://script.google.com/macros/s/AKfycbxUgS-1L8rNPfmjl0fjb2Cd2H4R5MB-AB0NIETodz1OrKdSjMquLDVA-dvOYthJXZRR/exec'// https://script.google.com/macros/s/AKfycbytbNVZSh9wXdOzgfPP5Z7o2G1V_F4sN5Z154n_U2KnujnzPbYNMReTv2keA561nUcv/exec',
             SYNC_INTERVAL: 30
         };
 
